crates/config/tests/snapshots/block_string_newline.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-newline

## Input

```mical
key |

```

## JSON

```json
{
  "key": ""
}
```

vim:ft=markdown
