crates/config/tests/snapshots/block_string_only_empty_lines.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-only-empty-lines

## Input

```mical
key |


a value

```

## JSON

```json
{
  "a": "value",
  "key": ""
}
```

vim:ft=markdown
