crates/config/tests/snapshots/block_string_strip.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-strip

## Input

```mical
key |-
  hello
  world

```

## JSON

```json
{
  "key": "hello\nworld"
}
```

vim:ft=markdown
