crates/config/tests/snapshots/block_string_tabs_literal.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-tabs-literal

## Input

```mical
key |
  a	b
  	c

```

## JSON

```json
{
  "key": "a\tb\n\tc\n"
}
```

vim:ft=markdown
