crates/config/tests/snapshots/block_string_trailing_empty_lines.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-trailing-empty-lines

## Input

```mical
a |
  hello


b value

```

## JSON

```json
{
  "a": "hello\n",
  "b": "value"
}
```

vim:ft=markdown
