crates/config/tests/snapshots/block_string_whitespace_only_line.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-whitespace-only-line

## Input

```mical
foo |
   
  a

```

## JSON

```json
{
  "foo": "\na\n"
}
```

vim:ft=markdown
