crates/config/tests/snapshots/block_string_whitespace_only_shallow.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-whitespace-only-shallow

## Input

```mical
foo |
 
  a

```

## JSON

```json
{
  "foo": "\na\n"
}
```

vim:ft=markdown
