crates/config/tests/snapshots/block_string_wsln_above_base.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-wsln-above-base

## Input

```mical
key |
   
  a
   
  b

```

## JSON

```json
{
  "key": "\na\n\nb\n"
}
```

vim:ft=markdown
