crates/config/tests/snapshots/boolean_multiple_trailing_spaces.snap
---
source: crates/config/tests/snapshots.rs
---
# boolean-multiple-trailing-spaces

## Input

```mical
a true   
b false   

```

## JSON

```json
{
  "a": true,
  "b": false
}
```

vim:ft=markdown
